# haskell-hangman

./: Dockerfile  README.md  docker-compose.yml  hangman.cabal
src/: Game.hs  Main.hs
test/: GameSpec.hs
